# matrix-earring

./: Cargo.toml
midi-matrix/: Cargo.toml  memory.x  run  rust-toolchain.toml
midi-matrix/.cargo/: config.toml
