[package]
edition = "2021"
name = "midi-matrix"
version = "0.1.0"

[dependencies]
embassy = { version = "0.1.0", path = "../../embassy/embassy", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-stm32 = { version = "0.1.0", path = "../../embassy/embassy-stm32", features = ["nightly", "defmt", "time-driver-any", "stm32f103c8", "memory-x", "unstable-pac", "exti", "usb-otg"]  }

defmt = "0.3"
defmt-rtt = "0.3"

cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.7.5", default-features = false }


ws2812-spi = { version = "0.4", features = [] }
embedded-graphics = "0.7"
smart-leds = "0.3"
utils = { path = "/Users/ace/play/lib/utils" }
eg-bdf = { path = "/Users/ace/play/clone/bdf/eg-bdf"}
graphics = { path = "/Users/ace/play/lib/graphics" }
pin-utils = "0.1.0"
usb-device = "0.2.8"
